--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -163,11 +163,11 @@
              <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/idzmuf" target="_blank">Taylor Swift</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/idzmuf" target="_blank">Taylor Swift</a></li>
                     <li class="team team-top"><a href="https://reddit.com/idzmuf" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://redd.it/ie0581" target="_blank">Emilia Clarke</a></li>
+                    <li class="loser team-top"><a href="https://redd.it/ie0581" target="_blank">Emilia Clarke</a></li>
                     <li class="team team-top"><a href="https://redd.it/ie0581" target="_blank">Natalie Portman</a></li>
                 </ul>
              </div>     
@@ -176,8 +176,8 @@
              <div class="semis-l current">
                 <div class="round-details">Semifinals 1 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="http://reddit.com/ih4qqg" target="_blank">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="http://reddit.com/ih4qqg" target="_blank">Margot Robbie</a></li>
                 </ul>
              </div>
              <div class="final current">
@@ -191,8 +191,8 @@
              <div class="semis-r current">
                 <div class="round-details">Semifinals 2 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Emma Watson</a></li>
                 </ul>
              </div>
           </div>
@@ -201,11 +201,11 @@
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/idzmvs" target="_blank">Margot Robbie</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/idzmvs" target="_blank">Gal Gadot</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/idzmvs" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/idzmx3" target="_blank">Emma Watson</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/idzmx3" target="_blank">Elizabeth Olsen</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/idzmx3" target="_blank">Elizabeth Olsen</a></li>
                 </ul>
              </div>  
              <div class="round round-three current">
