--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -163,8 +163,8 @@
              <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="loser team-top"><a href="https://reddit.com/idzmuf" target="_blank">Taylor Swift</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/idzmuf" target="_blank">Ana De Armas</a></li>
+                    <li class="loser team-top"><a href="https://redd.it/ihl65m" target="_blank">Taylor Swift</a></li>
+                    <li class="team team-top"><a href="https://redd.it/ihl65m" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="loser team-top"><a href="https://redd.it/ie0581" target="_blank">Emilia Clarke</a></li>
@@ -176,8 +176,8 @@
              <div class="semis-l current">
                 <div class="round-details">Semifinals 1 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top"><a href="http://reddit.com/ih4qqg" target="_blank">Ana De Armas</a></li>
-                    <li class="team team-top"><a href="http://reddit.com/ih4qqg" target="_blank">Margot Robbie</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);" target="_blank">?</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);" target="_blank">Margot Robbie</a></li>
                 </ul>
              </div>
              <div class="final current">
