--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -163,7 +163,7 @@
              <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="loser team-top"><a href="https://redd.it/ihl65m" target="_blank">Taylor Swift</a></li>
+                    <li class="team team-top"><a href="https://redd.it/ihl65m" target="_blank">Taylor Swift</a></li>
                     <li class="team team-top"><a href="https://redd.it/ihl65m" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
