--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -184,14 +184,14 @@
                 <i class="fa fa-trophy"></i>
                 <div class="round-details">Grand Finale <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="https://redd.it/iodv43" target="_blank">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="https://redd.it/iodv43" target="_blank">Emma Watson;</a></li>
                 </ul>
              </div>
              <div class="semis-r current">
                 <div class="round-details">Semifinals 2 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top"><a href="https://redd.it/il8n5z" target="_blank">Natalie Portman</a></li>
+                    <li class="loser team-top"><a href="https://redd.it/il8n5z" target="_blank">Natalie Portman</a></li>
                     <li class="team team-top"><a href="https://redd.it/il8n5z" target="_blank">Emma Watson</a></li>
                 </ul>
              </div>
