--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -185,7 +185,7 @@
                 <div class="round-details">Grand Finale <br/></div>
                 <ul class ="matchup championship">
                     <li class="team team-top"><a href="https://redd.it/iodv43" target="_blank">Ana De Armas</a></li>
-                    <li class="team team-top"><a href="https://redd.it/iodv43" target="_blank">Emma Watson;</a></li>
+                    <li class="team team-top"><a href="https://redd.it/iodv43" target="_blank">Emma Watson</a></li>
                 </ul>
              </div>
              <div class="semis-r current">
