three celebs in first round

--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -52,16 +52,20 @@
                 <ul class="matchup">
                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
@@ -69,16 +73,20 @@
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                </ul>
-                <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                </ul>
+                <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
@@ -86,16 +94,20 @@
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                 </ul>
-                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                 </ul>
+                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
@@ -103,16 +115,20 @@
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                 </ul>
-                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                 </ul>
+                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
@@ -284,16 +300,20 @@
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                </ul>
-                <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                </ul>
+                <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
@@ -301,16 +321,20 @@
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                </ul>
-                <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                </ul>
+                <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
@@ -318,16 +342,20 @@
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                 </ul>
-                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                 </ul>
+                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
@@ -335,16 +363,20 @@
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                 </ul>
-                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                 </ul>
+                 <ul class="matchup">
+                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
@@ -352,7 +384,7 @@
              <!-- END ROUND ONE -->                          
           </div>
        </div>
-    </section>
+    </section>s
     <section class="share">
         <p>&nbsp;</p>
     </section>
