--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -53,43 +53,43 @@
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Munn<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Sophie Turner<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Zendaya<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Anna Kendrick<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Emily Vancamp<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Maggie Grace<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Stacy Keibler<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Lauren Cohan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Heidi Klum<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Gal Gadot<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Demi Lovato<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group B</p>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Keri Russell<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kate Upton<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Charlize Theron<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Emma Stone<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Rachel Weisz<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Emmy Rossum<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Saoirse Ronan<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Halle Berry<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Miley Cyrus<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group C</p>
                 <ul class="matchup">
