--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -110,7 +110,7 @@
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Hailee Steinfeld<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group D</p>
                  <ul class="matchup">
