--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -116,12 +116,12 @@
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Alice Eve<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Taylor Swift<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Bar Refaeli<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Nina Dobrev<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Kelly Rohrbach<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
