--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -126,7 +126,7 @@
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Cobie Smulders<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Michelle Keegan<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
